--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
   <form class="modal-content animate" action="/action_page.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+     
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <label for="uname"><b>Name & Surname</b></label>
+      <input type="text" placeholder="Enter Name & Surname" name="uname" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <label for="psw"><b> Last Two Digit of Exam number</b></label>
+      <input type="password" placeholder="Enter Exam number" name="psw" required>
         
       <button type="submit">Login</button>
       <label>
