--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <label for="uname"><b>Name & Surname</b></label>
+      <input type="text" placeholder="Enter Name & Surname" name="uname" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <label for="psw"><b>Last Two Digit of Exam Number</b></label>
+      <input type="password" placeholder="Enter Exam Number" name="psw" required>
         
       <button type="submit">Login</button>
       <label>
