--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       To get started hit the menu button and enjoy.
   </p>  
   
+  <p>
+    If your are a John wesley kosibay matric 2022 student, please kindly Login below. You will be required to enter your Full name, surname and the last two digit of your exam number!
+  </p>
   
   <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
@@ -87,3 +90,17 @@ window.onclick = function(event) {
     }
 }
 </script>
+
+<h2>About john wesley kosibay</h2>
+
+<p>
+  John Wesley kosibay is a private middle school situated in Umhlabuyalingana Manguzi 
+
+</p>
+<p>
+  Contact John wesley kosibay kosibay private school
+</p>
+<a class="btn" href="mailto:admin@johnwesleykosibay.co.za" target="blank">Email</a>
+<a class="btn" href="call:27828896605" target="_blank">Call</a>
+<a class="btn" href="https://www.facebook.com/JohnwesleyKB" target="_blank">facebook</a>
+<a class="btn" href="GetCurrentPosition:P.O Box 689 3973 Umhlabuyalingana, South Africa" target="_blank">Locate</a>
