--- a/page2.html
+++ b/page2.html
@@ -37,100 +37,62 @@
       Isimangaliso wetland park offers various activities which includes Game drive, boat cruise, look out view and etc.
 </p>
 
-<div class="slideshow-container">
 
-  <div class="mySlides fade">
-    <img src="Exursion/Exursion1.jpg" style="width: 355px;">
-    <div class="text">Matric 2022</div>
-  </div>
+    
   
-  <div class="mySlides fade">
-    <img src="Exursion/Exursion 2.jpg" style="width: 335px;">
-    <div class="text">Matric 2022</div>
-  </div>
   
-  <div class="mySlides fade">
-    <img src="Exursion/Girls.jpg" style="width: 335px;">
-    <div class="text">Matric 2022</div>
-  </div>
-  
-  </div>
-  <br>
-  
-  <div style="text-align:center">
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-  </div>
-  
-  <script>
-  let slideIndex = 0;
-  showSlides();
-  
-  function showSlides() {
-    let i;
-    let slides = document.getElementsByClassName("mySlides");
-    let dots = document.getElementsByClassName("dot");
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";  
-    }
-    slideIndex++;
-    if (slideIndex > slides.length) {slideIndex = 1}    
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";  
-    dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 2000); // Change image every 10 seconds
-  }
-  </script>
-  
-
-
 
 <p>
     Learners had their first activity where they were taken through crocodile species and further their knowledge about crocodiles, how they live and behave. After viewing the crocodiles their had their second activity of which is Game drive. They didn't see much animals as it was kinda late and animals by then were concealed.
 
 </p>
-<div class="slideshow-container">
 
-  <div class="mySlides fade">
-    <img src="Exursion/Exursion1.jpg" style="width: 355px;">
-    <div class="text">Matric 2022</div>
-  </div>
-  
-  <div class="mySlides fade">
-    <img src="Exursion/Exursion 2.jpg" style="width: 335px;">
-    <div class="text">Matric 2022</div>
-  </div>
-  
-  <div class="mySlides fade">
-    <img src="Exursion/Girls.jpg" style="width: 335px;">
-    <div class="text">Matric 2022</div>
-  </div>
-  
-  </div>
-  <br>
-  
-  <div style="text-align:center">
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-  </div>
-  
- 
-    
+
+
+
+
+
 
 
 <p>
     They further their Excursion by hiking to the lookout point where they viewed the beauty of St.lucia landscape. This point has  view of indian ocean and also the st.lucia as a whole. The pictures below dislpays the lookout point in st.lucia
 </p>
-<img src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/345448790_9386973148040104_3419613976134059757_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeH6-qid0cKEcXE9cYX3e7oeXPGa8D6OoIZc8ZrwPo6ghmekmWcakBgaWvWduKkcHVJ38dZ3Ncafz3kA_uZunjcq&_nc_ohc=u41c6ZDK7BkAX-knkJ7&_nc_ht=scontent-jnb1-1.xx&oh=00_AfBNCApoyiK14iSWHeT7_7MMH6bYpi920y3kN1VCXaPjEQ&oe=645F85FD" alt="">
-<img src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/345424647_980636609773490_1655089576021222010_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGVBp7mUv1i1boPrJ6c2I-2ReMT1cLjyIRF4xPVwuPIhKTUcAI58qS5EZiDDyGhqxLw5elnyecTHL7RzsWt_XGK&_nc_ohc=gTNybfpXAW0AX-34i6Z&_nc_ht=scontent-jnb1-1.xx&oh=00_AfAg6fmjlhozeyv6fQpIzbMc3y261mZU5XCguaJkPxYcTQ&oe=645E66FF" alt="">
-<img src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/346054674_580592350718559_5467010675738105246_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeFFAOuesymMsKkweWn1ycsQTs8LD2mQ-ihOzwsPaZD6KF69uxYqwLtFEm8h4Ae7vM32eu6UZ5lOphGfSSfMTToL&_nc_ohc=iMxO_eF4iE4AX_hUYIv&_nc_ht=scontent-jnb1-1.xx&oh=00_AfCgxkQ90VWMnR_3DUyd56JekfV8oKrX1hgoB_6W3PXcCA&oe=645E8AD7" alt="">
-<img src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/346065889_3449268752058183_2109913958762119490_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGpDOZjWJ2RVKc9i5_JUYlGUihdaQePb4RSKF1pB49vhP3hl4YImE2Ja5_jD44XqrCb51vwPIU3CRV35_ux9Fhu&_nc_ohc=5UOJYs8tqnsAX8bnoKF&_nc_ht=scontent-jnb1-1.xx&oh=00_AfCdag5fsoZgdGFDVglbTBUqFi41Kbsx6JJ2q3DB34nMmw&oe=645ED595" alt="">
-<img src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/345231782_657451806244448_4507103827898274741_n.jpg?stp=dst-jpg_p180x540&_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_eui2=AeEflLiVQ1YUEV_zrVe7xZyT_zMCRBTEObP_MwJEFMQ5s5NNOPor4gwcOnlxEcEeYOHw97jyr7Rq052fxJ46BGIV&_nc_ohc=9yly6ZXiqrwAX9zWJW1&_nc_ht=scontent-jnb1-1.xx&oh=00_AfD6erdvco5-hzflXw5-4OZu_Q6uIoookZVZeMM7HrWq6A&oe=645F4330" alt="">
-<p>
+
+<!-- The four columns -->
+<div class="row">
+    <div class="column">
+      <img src="Exursion/Exursion1.jpg" alt="lookout point" style="width: 355px" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Exursion/Lookout5.jpg" alt="lookout point" style="width: 355px;" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Exursion/Lookout10.jpg" alt="lookout point" style="width: 355px;" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Exursion/Lookout4.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
+  </div>
+  
+  <div class="container">
+    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+    <img id="expandedImg" style="width:100%">
+    <div id="imgtext"></div>
+  </div>
+  
+  <script>
+  function myFunction(imgs) {
+    var expandImg = document.getElementById("expandedImg");
+    var imgText = document.getElementById("imgtext");
+    expandImg.src = imgs.src;
+    imgText.innerHTML = imgs.alt;
+    expandImg.parentElement.style.display = "block";
+  }
+  </script>        
+
+
+
+
     After the lookout they went to beachfront resort in St.lucia Estuary for a view and after the beach front they went for a lunch. See images below!
 </p>
 <img src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/346058201_157174493989097_5337594450887776364_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeFdbse9xV_lms1jHjpjUnqnfjWZ2Zae78l-NZnZlp7vycJXGsE9kpqhwDfMR875AgD1dMX7LZcEoYxCa0vbEO2h&_nc_ohc=EV5_swOSh4kAX-AbECL&_nc_ht=scontent-jnb1-1.xx&oh=00_AfDoPBz8IZ_443jPL1YQcrA8DndxuTGqBSn-G7f3a8dEyg&oe=645F9E81" alt="">
