--- a/page2.html
+++ b/page2.html
@@ -61,16 +61,16 @@
 <!-- The four columns -->
 <div class="row">
     <div class="column">
-      <img src="Exursion/Exursion1.jpg" alt="lookout point" style="width: 355px" onclick="myFunction(this);">
+      <img src="Exursion/Exursion1.jpg" alt="lookout point" style="width: 100%" onclick="myFunction(this);">
     </div>
     <div class="column">
-      <img src="Exursion/Lookout5.jpg" alt="lookout point" style="width: 355px;" onclick="myFunction(this);">
+      <img src="Exursion/Lookout5.jpg" alt="lookout point" style="width: 100%;" onclick="myFunction(this);">
     </div>
     <div class="column">
-      <img src="Exursion/Lookout10.jpg" alt="lookout point" style="width: 355px;" onclick="myFunction(this);">
+      <img src="Exursion/Lookout10.jpg" alt="lookout point" style="width: 100%;" onclick="myFunction(this);">
     </div>
     <div class="column">
-      <img src="Exursion/Lookout4.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+      <img src="Exursion/Lookout4.jpg" alt="Lights" style="width: 100%" onclick="myFunction(this);">
     </div>
   </div>
   
