--- a/page2.html
+++ b/page2.html
@@ -61,22 +61,22 @@
 <!-- The four columns -->
 <div class="row">
     <div class="column">
-      <img src="Exursion/Exursion1.jpg" alt="lookout point" style="width: 100%" onclick="myFunction(this);">
+      <img src="Exursion/Exursion1.jpg" alt="lookout point" style="width: 25px" onclick="myFunction(this);">
     </div>
     <div class="column">
-      <img src="Exursion/Lookout5.jpg" alt="lookout point" style="width: 100%;" onclick="myFunction(this);">
+      <img src="Exursion/Lookout5.jpg" alt="lookout point" style="width: 25px;" onclick="myFunction(this);">
     </div>
     <div class="column">
-      <img src="Exursion/Lookout10.jpg" alt="lookout point" style="width: 100%;" onclick="myFunction(this);">
+      <img src="Exursion/Lookout10.jpg" alt="lookout point" style="width: 25px;" onclick="myFunction(this);">
     </div>
     <div class="column">
-      <img src="Exursion/Lookout4.jpg" alt="Lights" style="width: 100%" onclick="myFunction(this);">
+      <img src="Exursion/Lookout4.jpg" alt="Lights" style="width: 25px" onclick="myFunction(this);">
     </div>
   </div>
   
   <div class="container">
     <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-    <img id="expandedImg" style="width:100%">
+    <img id="expandedImg" style="width: 355px;">
     <div id="imgtext"></div>
   </div>
   
