--- a/page3.html
+++ b/page3.html
@@ -32,7 +32,7 @@
 <h1>
     Term 2 Top Ten
    </h1>
-<img class="TTTT1" src="https://scontent-jnb1-1.xx.fbcdn.net/v/t39.30808-6/302290439_468430535302033_8411106244665036252_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeE1usvexsOtZLVO03MFpUexqD7xcqNWhBqoPvFyo1aEGhhBss3evIM9EIxoSRpPwigSJwXQ6Diba0sx5w7TQSEA&_nc_ohc=zGS1Q5sP_QMAX-oRwTW&_nc_ht=scontent-jnb1-1.xx&oh=00_AfAwAn0isZ3qQ8gMtJE9bBxMMw7kahG0UHJ4aSknz7qkjw&oe=645F750C" alt="">
+<img class="TTTT1" src="Top ten/badge.jpg" alt="Badge">
 
 <p>
     Matric class of 2022 had 40 Learners and out of 40 there were ten top achievers in term 2. They ranges from 10 to 1 and they are as follows 
@@ -121,6 +121,7 @@
       slides[slideIndex-1].style.display = "block";  
       dots[slideIndex-1].className += " active";
       setTimeout(showSlides, 2000); // Change image every 60 seconds
+      // change image every 60 seconds
     }
     </script>
     
