--- a/page2.html
+++ b/page2.html
@@ -58,37 +58,6 @@
     They further their Excursion by hiking to the lookout point where they viewed the beauty of St.lucia landscape. This point has  view of indian ocean and also the st.lucia as a whole. The pictures below dislpays the lookout point in st.lucia
 </p>
 
-<!-- The four columns -->
-<div class="row">
-    <div class="column">
-      <img src="Exursion/Exursion1.jpg" alt="lookout point" style="width: 100px" onclick="myFunction(this);">
-    </div>
-    <div class="column">
-      <img src="Exursion/Lookout5.jpg" alt="lookout point" style="width: 100px;" onclick="myFunction(this);">
-    </div>
-    <div class="column">
-      <img src="Exursion/Lookout10.jpg" alt="lookout point" style="width: 100px;" onclick="myFunction(this);">
-    </div>
-    <div class="column">
-      <img src="Exursion/Lookout4.jpg" alt="Lights" style="width: 100px" onclick="myFunction(this);">
-    </div>
-  </div>
-  
-  <div class="container">
-    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-    <img id="expandedImg" style="width: 355px;">
-    <div id="imgtext"></div>
-  </div>
-  
-  <script>
-  function myFunction(imgs) {
-    var expandImg = document.getElementById("expandedImg");
-    var imgText = document.getElementById("imgtext");
-    expandImg.src = imgs.src;
-    imgText.innerHTML = imgs.alt;
-    expandImg.parentElement.style.display = "block";
-  }
-  </script>        
 
 
 
@@ -111,9 +80,9 @@
     The Boat cruise was their last activity in St.lucia and after it they went back to normal. Final examinations!
 </p>
 <p>
-    kindly view Photo Dump for more excursion photo's
+    kindly view Excurion Gallery for more excursion photo's
 </p>
-<a class="btn1" href="page6.html">Photo Dump</a>
+<a class="btn1" href="page6.html">Excurion Gallery</a>
 
 <h2>
     Quick Links
