--- a/page2.html
+++ b/page2.html
@@ -38,17 +38,99 @@
 </p>
 
 
+    <!-- Header -->
+<div class="header" id="myHeader">
     
+   
+   
+  </div>
   
+  <!-- Photo Grid -->
+    </div>
+    <div class="row"> 
+        <div class="column">
+          <img src="Exursion/Exursion1.jpg" style="width:100%">
+          <img src="Exursion/Exursion 2.jpg" style="width:100%">
+          <img src="Exursion/main photo.jpg" style="width:100%">
+          <img src="Exursion/Girls.jpg" style="width:100%">
+          <img src="EX Gallery/IMG-20230509-WA0011.jpg" style="width:100%">
+          <img src="EX Gallery/IMG-20230509-WA0018.jpg" style="width:100%">
+          <img src="EX Gallery/IMG-20230509-WA0021.jpg" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+        </div>  
+        <div class="column">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+          <img src="#" style="width:100%">
+        </div>
+      
+  </div>
   
-
+  <script>
+  // Get the elements with class="column"
+  var elements = document.getElementsByClassName("column");
+  
+  // Declare a loop variable
+  var i;
+  
+  // Full-width images
+  function one() {
+      for (i = 0; i < elements.length; i++) {
+      elements[i].style.msFlex = "100%";  // IE10
+      elements[i].style.flex = "100%";
+    }
+  }
+  
+  // Two images side by side
+  function two() {
+    for (i = 0; i < elements.length; i++) {
+      elements[i].style.msFlex = "50%";  // IE10
+      elements[i].style.flex = "50%";
+    }
+  }
+  
+  // Four images side by side
+  function four() {
+    for (i = 0; i < elements.length; i++) {
+      elements[i].style.msFlex = "25%";  // IE10
+      elements[i].style.flex = "25%";
+    }
+  }
+  
+  // Add active class to the current button (highlight it)
+  var header = document.getElementById("myHeader");
+  var btns = header.getElementsByClassName("btn");
+  for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function() {
+      var current = document.getElementsByClassName("active");
+      current[0].className = current[0].className.replace(" active", "");
+      this.className += " active";
+    });
+  }
+  </script>
+  
 <p>
     Learners had their first activity where they were taken through crocodile species and further their knowledge about crocodiles, how they live and behave. After viewing the crocodiles their had their second activity of which is Game drive. They didn't see much animals as it was kinda late and animals by then were concealed.
-
 </p>
-
-
-
 
 
 
